--- a/templates/evento.html
+++ b/templates/evento.html
@@ -6,11 +6,12 @@
 <h2>Eventos</h2>
 <form action="submit" method="POST">{% csrf_token %}
 <label>Titulo: </label><br>
-<input type="text" name="titulo" size="29"><br>
+<input type="number" name="id_evento" value="{{ evento.id }}" hidden>
+<input type="text" name="titulo" size="29" value="{{ evento.titulo }}"><br>
 <label>Data do evento: </label><br>
-<input type="date" size="20" name="data_evento"><br>
+<input type="date" size="20" name="data_evento" value="{{ evento.data_evento }}"><br>
 <label>Descrição</label><br>
-<textarea name="descricao" rows="5" cols="28"></textarea><br>
+<textarea name="descricao" rows="5" cols="28">{{ evento.descricao }}</textarea><br>
     <button type="submit">submit</button>
 </form>
 
